// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageContent — snapshot matrix baseline (variant x size x {default,disabled} x modes) assistant-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 16,
          "maxWidth": "85%",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        undefined,
      ]
    }
    testID="ui-message-content"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      hello world
    </Text>
  </View>
</View>
`;

exports[`MessageContent — snapshot matrix baseline (variant x size x {default,disabled} x modes) assistant-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 16,
          "maxWidth": "85%",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        undefined,
      ]
    }
    testID="ui-message-content"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      hello world
    </Text>
  </View>
</View>
`;

exports[`MessageContent — snapshot matrix baseline (variant x size x {default,disabled} x modes) system-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "alignSelf": "center",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderRadius": 16,
          "maxWidth": "85%",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        undefined,
      ]
    }
    testID="ui-message-content"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      hello world
    </Text>
  </View>
</View>
`;

exports[`MessageContent — snapshot matrix baseline (variant x size x {default,disabled} x modes) system-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "alignSelf": "center",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderRadius": 16,
          "maxWidth": "85%",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        undefined,
      ]
    }
    testID="ui-message-content"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      hello world
    </Text>
  </View>
</View>
`;

exports[`MessageContent — snapshot matrix baseline (variant x size x {default,disabled} x modes) user-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "alignSelf": "flex-end",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 16,
          "maxWidth": "85%",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        undefined,
      ]
    }
    testID="ui-message-content"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      hello world
    </Text>
  </View>
</View>
`;

exports[`MessageContent — snapshot matrix baseline (variant x size x {default,disabled} x modes) user-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "alignSelf": "flex-end",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 16,
          "maxWidth": "85%",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        undefined,
      ]
    }
    testID="ui-message-content"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      hello world
    </Text>
  </View>
</View>
`;

exports[`MessageContent — snapshot matrix non-Latin font-fallback canary (canaryVariant x size=default x default x light x lang) user-m-default-light-fa 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "alignSelf": "flex-end",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 16,
          "maxWidth": "85%",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        undefined,
      ]
    }
    testID="ui-message-content"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      hello world
    </Text>
  </View>
</View>
`;
